# rookie-numbers

./: Cargo.toml  README.md  cspell.yaml
.trunk/: trunk.yaml
crates/sha256/: Cargo.toml
crates/sha256/src/: lib.rs  macros.rs
crates/sha256/src/components/: mod.rs
crates/utils/src/: lib.rs
crates/utils/src/stwo/: macros.rs
