[workspace]
members = ["crates/rookie", "crates/sha256", "crates/utils"]
resolver = "2"
exclude = ["external/stwo"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
stwo = { path = "external/stwo/crates/stwo" }
stwo-air-utils = { path = "external/stwo/crates/air-utils" }
stwo-air-utils-derive = { path = "external/stwo/crates/air-utils-derive" }
stwo-constraint-framework = { path = "external/stwo/crates/constraint-framework", features = [
  "prover",
  "std",
] }
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
num-traits = "0.2.19"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
thiserror = { version = "2.0.10", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.3.3"
itertools = "0.13.0"
test-log = { version = "0.2.15", features = ["trace"] }
peak_alloc = { version = "0.2" }
sha2 = "0.10.8"
tikv-jemallocator = "0.6.1"
# Stwo dependencies
bytemuck = { version = "1.14.3", default-features = false }
hashbrown = ">=0.15.2"
std-shims = { path = "external/stwo/crates/std-shims", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
educe = "0.5.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
utils = { path = "crates/utils" }
divan = "0.1.21"

[profile.test]
overflow-checks = false
