[package]
name = "sha256"
version.workspace = true
edition.workspace = true

[dependencies]
stwo.workspace = true
stwo-constraint-framework.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
itertools.workspace = true
test-log.workspace = true
rayon.workspace = true
sha2.workspace = true
utils.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
peak_alloc = { workspace = true, optional = true }
smalloc = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
ctor = { workspace = true, optional = true }

[dev-dependencies]
divan.workspace = true
test-log.workspace = true

[[bench]]
name = "sha256"
harness = false

[features]
slow-tests = []
parallel = ["stwo/parallel", "stwo-constraint-framework/parallel"]
track-relations = []
default = []
peak-alloc = ["dep:peak_alloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
smalloc = ["dep:smalloc", "dep:ctor"]
